@@ -1,3 +1,7 @@
+2005-09-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/raw.c (query): fixed capitalization.
+
 2005-09-20  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/compose.c: applied patch from Sylvain Foret
